--- a/Slutuppgift/Site1.Master
+++ b/Slutuppgift/Site1.Master
@@ -25,9 +25,10 @@
 			<div class="mainwindow">
                 <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
         
-              </asp:ContentPlaceHolder>
-			</div>
-		</div>
+              </asp:ContentPlaceHolder>                
+			</div>  
+            <h4>© Rikard och Patrick</h4>                     
+		</div>             
 	    </form>
 	</body>
 </html>
