--- a/Slutuppgift/style.css
+++ b/Slutuppgift/style.css
@@ -12,13 +12,32 @@
 h2 {	
     font-family: Arial;
 	font-variant: normal;
-	letter-spacing: 2px;
 	font-size: 24px;
     margin: 0px;
     padding: 0px;
 	color: black;			
 		
-} 
+}
+
+h3 {
+    font-family: Arial;
+    font-variant: normal;
+    font-size: 16px;
+    margin: 0px;
+    padding: 0px;
+    color: black;
+}
+    
+h4 {
+    float: right;
+    color: white;     
+    font-family: Arial;		
+	font-size: 12px;
+    margin-right: 0px;
+    margin-bottom: 10px;
+    padding: 0px;  
+}
+    					
 
 p {
     font-size: 14px;		
@@ -34,12 +53,13 @@ body{
 }
 
 .container{
+    
 	background-image:url('bakgrund2.jpg');
 	background-repeat:repeat;
 	margin: auto;
 	padding: 10px;
 	width: 600px;
-	height: 630px;
+	height: 645px;
 	border-style: solid;
 	border-width: 3px;
 	border-radius: 10px;
@@ -53,9 +73,10 @@ body{
 	letter-spacing: 2px;
 	font-size: 14px;
     margin: 0px;
-    padding: 0px;
-	color: black;	    
+    padding: 0px;  
 }
+
+
 
 
 .statsname {
