--- a/Slutuppgift/style.css
+++ b/Slutuppgift/style.css
@@ -33,9 +33,8 @@ h4 {
     color: white;     
     font-family: Arial;		
 	font-size: 12px;
-    margin-right: 0px;
-    margin-bottom: 10px;
     padding: 0px;  
+    margin: 3px 0px 10px 0px;
 }
     					
 
